[package]
name = "re-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = "0.6.19"
clap = { version = "4.3.12", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = "1.0.171"
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json"] }
thiserror = "1.0.43"
time = "0.3.23"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde"] }
